--- a/package.json
+++ b/package.json
@@ -8,8 +8,20 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "bootstrap": "^5.2.1",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "cors": "^2.8.5",
+    "http": "*",
+    "http-proxy-middleware": "^2.0.6",
+    "material-design-icons-iconfont": "^6.7.0",
+    "nodemon": "^2.0.19",
+    "sass": "^1.54.9",
+    "sass-loader": "^13.0.2",
+    "vue": "^2.6.14",
+    "vue-router": "^3.6.5",
+    "vuetify": "^2.6.10",
+    "vuetify-loader": "^1.9.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
