--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
     "sass": "^1.54.9",
     "sass-loader": "^13.0.2",
     "vue": "^2.6.14",
+    "vue-cli-plugin-vuetify": "^2.5.8",
+    "vue-confirm-dialog": "^1.1.0",
     "vue-router": "^3.6.5",
     "vuetify": "^2.6.10",
-    "vuetify-loader": "^1.9.2"
+    "vuetify-loader": "^1.9.2",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
