--- a/package.json
+++ b/package.json
@@ -5,16 +5,21 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "nodemon server"
   },
   "dependencies": {
+    "@mdi/font": "^7.0.96",
     "axios": "^0.27.2",
+    "body-parser": "^1.20.0",
     "bootstrap": "^5.2.1",
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
     "http": "*",
     "http-proxy-middleware": "^2.0.6",
+    "material-design-icons": "^3.0.1",
     "material-design-icons-iconfont": "^6.7.0",
+    "node-sass": "^7.0.3",
     "nodemon": "^2.0.19",
     "sass": "^1.54.9",
     "sass-loader": "^13.0.2",
