--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.2.1",
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
+    "git": "^0.1.5",
     "http": "*",
     "http-proxy-middleware": "^2.0.6",
     "material-design-icons": "^3.0.1",
